# cirrr

./: .env  .gitignore  README.md  docker-compose.yml
aimw/: .dockerignore  Dockerfile  minimum_req.txt  pyproject.toml  run.sh
aimw/app/: main.py
aimw/app/api/api_v1/: api.py
aimw/app/core/: ai_config.py  aimw_config.py  log_config.py  metadata_service.py  vllm_client_config.py
aimw/app/exceptions/: exceptions.py
aimw/app/resources/icl_templates/: icl_cir3_templates.py  icl_cir3_templates_factory.py  icl_eval_templates.py  icl_gen_templates.py
aimw/app/schemas/enum/: ai_enums.py  common_enums.py
aimw/app/schemas/models/: agent.py  common_agents_group.py  decentralized_agents_group.py  decentralized_heterogeneous_agents_group.py  decentralized_homogeneous_agents_group.py  qas.py
aimw/app/services/batch/: batch_qa_gen_service.py  batch_qgen_agen_service.py
aimw/app/services/data/: data_processing.py  insuranceqa_data_preprocessing.py  medmcqa_data_preprocessing.py  medqa_data_preprocessing.py
aimw/app/services/eval/: distinc_n.py  enhanced_geval.py  moverscore_v3.py  t_test.py
aimw/app/services/factory/: model_factory_service.py  runnable_system.py
aimw/app/services/observability/: profiler.py  telemetry.py
aimw/app/services/security/: security.py
aimw/app/services/vllm/: batch_processor.py  health_check.py  resilient_client.py  vllm_client.py
aimw/app/tests/: pytest.ini
aimw/app/tools/: diversity_tools.py
aimw/app/topology/edges/: cir3_edges.py
aimw/app/utils/: baseline_utils.py  cct_saar_utils.py  common_utils.py  json_utils.py
(+53 files in other folders)
