[tool.poetry]
name = "cir3"
version = "0.1.15"
description = "Faithful and Comprehensive QAG Using LLM-based multi-agent setting"
authors = ["anonym-mlp-ai"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
transformers = "4.40.1"
llama-index = "0.10.31"
llama-index-embeddings-text-embeddings-inference = "0.1.2"
sentence-transformers = "2.7.0"
FlagEmbedding = "1.2.9"
langchain = "0.1.16"
langchain-groq = "0.1.3"
langchain-chroma = "0.1.0"
sentencepiece = "0.2.0"
seaborn = "0.13.2"
ragas = "0.1.7"
deepeval = "0.21.45"
tqdm = "4.66.2"
bert-score = "0.3.13"
moverscore = "1.0.3"
vendi-score = "0.0.3"
rouge = "1.0.1"
rouge-score = "0.1.2"
jarowinkler = "2.0.1"
rapidfuzz = "3.9.1"
Levenshtein = "0.25.1"
gensim = "4.3.2"
scipy = "1.10.1"
POT = "0.9.3"
multiset = "3.1.0"
langgraph = "0.0.44"
duckduckgo-search = "5.3.0"
tavily-python = "0.3.3"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.1.0"
autopep8 = "^2.3.0"
black = "^24.4.2"
pytest = "^8.2.2"
requests = "^2.32.3"
locust = "^2.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
